; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_prepare.c_build_regtype_array.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_prepare.c_build_regtype_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REGTYPEOID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @build_regtype_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @build_regtype_array(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = mul i64 %9, 4
  %11 = trunc i64 %10 to i32
  %12 = call i64 @palloc(i32 %11)
  %13 = inttoptr i64 %12 to i32*
  store i32* %13, i32** %5, align 8
  store i32 0, i32* %7, align 4
  br label %14

14:                                               ; preds = %29, %2
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %4, align 4
  %17 = icmp slt i32 %15, %16
  br i1 %17, label %18, label %32

18:                                               ; preds = %14
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* %7, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @ObjectIdGetDatum(i32 %23)
  %25 = load i32*, i32** %5, align 8
  %26 = load i32, i32* %7, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  store i32 %24, i32* %28, align 4
  br label %29

29:                                               ; preds = %18
  %30 = load i32, i32* %7, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %7, align 4
  br label %14

32:                                               ; preds = %14
  %33 = load i32*, i32** %5, align 8
  %34 = load i32, i32* %4, align 4
  %35 = load i32, i32* @REGTYPEOID, align 4
  %36 = call i32* @construct_array(i32* %33, i32 %34, i32 %35, i32 4, i32 1, i8 signext 105)
  store i32* %36, i32** %6, align 8
  %37 = load i32*, i32** %6, align 8
  %38 = call i32 @PointerGetDatum(i32* %37)
  ret i32 %38
}

declare dso_local i64 @palloc(i32) #1

declare dso_local i32 @ObjectIdGetDatum(i32) #1

declare dso_local i32* @construct_array(i32*, i32, i32, i32, i32, i8 signext) #1

declare dso_local i32 @PointerGetDatum(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
